[package]
name = "algodot"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
godot = { git = "https://github.com/godot-rust/gdext", default-features = true, branch = "master" }
futures = "0.3"
algonaut = { git = "https://github.com/manuelmauro/algonaut", rev = "75bce54" }
num-bigint = {git = "https://github.com/rust-num/num-bigint", version = "0.4.3"}
algodot_macros = { path = "../macros" }
algodot_core = { path = "../core" }
algodot_abi = { path = "../abi" }
serde_json = "1.0"
serde = "1.0"
quote = "1.0"
