[package]
name = "algodot"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.10", features = ["rt"] }
gdnative = { version = "0.11", features = ["async"] }
futures = "0.3"
algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "dependabot/cargo/ring-0.17.5" }
algonaut_algod = { git = "https://github.com/manuelmauro/algonaut", package="algonaut_algod",branch = "dependabot/cargo/ring-0.17.5" }
algonaut_core = { git = "https://github.com/manuelmauro/algonaut", package="algonaut_core",branch = "dependabot/cargo/ring-0.17.5" }
algonaut_transaction = { git = "https://github.com/manuelmauro/algonaut", package="algonaut_transaction",branch = "dependabot/cargo/ring-0.17.5" }
num-bigint = {git = "https://github.com/rust-num/num-bigint", version = "0.4.3"}
algodot_macros = { path = "../macros" }
algodot_core = { path = "../core" }
algodot_abi = { path = "../abi" }
serde_json = "1.0"
serde = "1.0"
